# booking-service

./: .gitignore  pyproject.toml  тз.md
app/api/: dependencies.py
app/database/: db.py
app/database/models/: cart.py  hotel_images.py  hotels.py  room_services.py  (+3 more)
backend/: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a7dd856ffcd_initial.py  82bcfff12012_add_quantity_to_room_model.py  863d1e258ebe_rename_password_to_hashed_password.py  89ce66b0cf56_add_address_fields_to_hotels.py  94a735baa5c9_add_is_active_to_cart_model.py
backend/app/: main.py
backend/app/api/: dependencies.py  forms.py  router.py
backend/app/api/routers/: __init__.py  auth.py  bookings.py  cart.py  hotel_images.py  hotel_services.py  hotel_staff.py  hotels.py  room_beds.py  room_images.py  room_services.py  rooms.py  services.py  users.py
backend/app/crud/: bookings.py  cart.py  hotel_images.py  hotel_services.py  hotel_staff.py  hotels.py  room_beds.py  room_images.py  room_services.py  rooms.py  services.py  users.py
backend/app/database/: __init__.py  db.py
backend/app/database/models/: __init__.py  bookings.py  cart.py  hotel_services.py  hotel_staff.py  hotels.py  room_beds.py  room_images.py  rooms.py  services.py  users.py
backend/app/database/schemas/: __init__.py  auth.py  bookings.py  cart.py  hotel_images.py  hotel_services.py  hotel_staff.py  hotels.py  room_beds.py  room_images.py  room_services.py  rooms.py  services.py  users.py
backend/app/utils/: config.py  exceptions.py  files.py  security.py
